# genai.example

./: .env.example  .gitignore  README.md  app.py  mcp_client_app.py  pyproject.toml  requirements.txt  workshop_ai_trends.ipynb
.streamlit/: config.toml
data/chroma/f83cf455-52a7-4042-8450-29f6817b3f64/: index_metadata.pickle
data/sinsenveien_11/plandok/: 00 Komplettvurdering_sak_202451391__oppdatert_10092025.docx  02_Reguleringsbestemmelser.docx  02_Reguleringsbestemmelser_Spor endring.docx  10_Bemerkningshåndtering - Forslagsstillers oppsummering av uttalelser.docx  29_Vegetasjonskartlegging og vurdering - Vedlegg.xlsx  Plankart_VN1.dwg  Plankart_VN2.dwg
scripts/: build_index.py
src/: config.py  rag.py
src/client/: app.py
src/fastmcp_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ragserver/: __init__.py  azure_clients.py  config.py  server.py  vectorstore.py
src/ragserver/indexing/: chunker.py  ingest.py
src/ragserver/tools/: rag_tools.py
vector_store/sinsenveien_11/6f3cd7af-4e72-4ae4-98ca-732bb700081f/: index_metadata.pickle
vector_store/sinsenveien_11/7f9afce9-8d12-4f75-b3cb-eb63441c2c86/: index_metadata.pickle
