[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-rag"
version = "0.1.0"
description = "MCP server + Streamlit client using FastMCP with RAG over the fastmcp repo."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp<3",
    "openai>=1.50.0",
    "chromadb>=0.5.3",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
]

[project.scripts]
rag-server = "ragserver.server:main"
rag-index = "ragserver.indexing.ingest:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.9",
    "mypy>=1.11.1",
]
